css/style.css
:root {
    /* I'll just steal gruvbox for now (technically it isn't stealing since it's under MIT). I will make sure to give
     * credit somewhere on the page */

    /* I define a lot of colors here in case, but I will probably only use a few.
     * The plan is to remove those I don't need in the end */
    --gruvbox-dark0:       #282828;
    --gruvbox-dark0_soft:  #32302f;
    --gruvbox-dark1:       #3c3836;
    --gruvbox-dark2:       #504945;
    --gruvbox-dark3:       #665c54;
    --gruvbox-dark4:       #7c6f64;
    --gruvbox-dark4_256:   #7c6f64;

    --gruvbox-gray_245:    #928374;
    --gruvbox-gray_244:    #928374;

    --gruvbox-light0_hard: #f9f5d7;
    --gruvbox-light0:      #fbf1c7;
    --gruvbox-light0_soft: #f2e5bc;
    --gruvbox-light1:      #ebdbb2;
    --gruvbox-light2:      #d5c4a1;
    --gruvbox-light3:      #bdae93;
    --gruvbox-light4:      #a89984;
    --gruvbox-light4_256:  #a89984;

    --gruvbox-bright_red:      #fb4934;
    --gruvbox-bright_green:    #b8bb26;
    --gruvbox-bright_yellow:   #fabd2f;
    --gruvbox-bright_blue:     #83a598;
    --gruvbox-bright_purple:   #d3869b;
    --gruvbox-bright_aqua:     #8ec07c;
    --gruvbox-bright_orange:   #fe8019;

    --gruvbox-neutral_red:     #cc241d;
    --gruvbox-neutral_green:   #98971a;
    --gruvbox-neutral_yellow:  #d79921;
    --gruvbox-neutral_blue:    #458588;
    --gruvbox-neutral_purple:  #b16286;
    --gruvbox-neutral_aqua:    #689d6a;
    --gruvbox-neutral_orange:  #d65d0e;

    --gruvbox-faded_red:       #9d0006;
    --gruvbox-faded_green:     #79740e;
    --gruvbox-faded_yellow:    #b57614;
    --gruvbox-faded_blue:      #076678;
    --gruvbox-faded_purple:    #8f3f71;
    --gruvbox-faded_aqua:      #427b58;
    --gruvbox-faded_orange:    #af3a03;

    --background-color1:    var(--gruvbox-dark0);
    --background-color2:    var(--gruvbox-dark1);
    --top-nav-color:        var(--gruvbox-bright_green);
    --text-on-bg-color0:    var(--gruvbox-light0_soft);
    --text-on-bg-color1:    var(--gruvbox-light1);
    --text-on-bg-color2:    var(--gruvbox-light2);
    --text-on-bg-color3:    var(--gruvbox-light3);

    --hamburger-menu-color: var(--gruvbox-neutral_blue);

    --common-shadow-color: var(--gruvbox-dark2);
}

body {
    margin: 0px;

    background-color: var(--background-color1);
}

article.common-article {
    color: var(--text-on-bg-color0);
    text-align: center;
}

/* article.common-article h3 { */
article.common-article h3 {
    margin: 0;
    padding: 0;
}

article.common-article p {
    padding: 0 2em 0 2em;
    margin-top: 0.5rem;
}

section.common-section {
    color: var(--text-on-bg-color0);
    text-align: center;
}

section.common-section h3 {
    margin: 0;
    padding: 0;
}
.common-box-shadow {
    box-shadow: 1px 2px 4px var(--common-shadow-color);
}

.stop-scroll {
    overflow: hidden;
}

/* Mobile content common for all pages */
@media screen and (max-width: 767px) {
    div.fade-layer {
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 5;
        display: none;

        background-color: rgba(0, 0, 0, 0.5);
    }

    div.fade-layer.show {
        display: block;
    }

    header.common-header {
        text-align: center;
        font-family: sans-serif;
    }

    header.common-header h1 {
        padding: 0;
        margin: 0;
        margin-bottom: 5px;

        font-size: 2.25rem;

        color: var(--text-on-bg-color0);
    }

    header.common-header h2 {
        padding: 0;
        margin: 0;

        font-size: 1.5rem;

        color: var(--text-on-bg-color2);
    }

    nav#mobile-hamburger-menu {
        position: fixed;
        left: -80%;
        z-index: 10;
        transition-property: left;
        transition-duration: 0.6s;

        height: 100vh;
        width: 80vw;
        background-color: var(--hamburger-menu-color);

    }

    /* Activated with javascript */
    nav#mobile-hamburger-menu.show {
        left: 0;
        transition-property: left;
        transition-duration: 0.6s;
    }

    nav#mobile-hamburger-menu section {
        background-color: var(--background-color2);
        color: var(--text-on-bg-color0);

        padding: 1rem;
        margin: 1rem;
    }

    nav#mobile-hamburger-menu section h2 {
        padding-bottom: 3px;
        border-bottom: 3px solid;
        margin: 0.5rem 0 0.5rem 0;
    }

    nav#mobile-hamburger-menu section a {
        display: block;

        text-decoration: none;
        color: var(--text-on-bg-color1);
        margin: 0.5rem 0 0.5rem 0;

        padding: 8px;
        border: 2px solid;
        border-radius: 6px;
    }
}

/* Desktop content common to all pages */
@media screen and (min-width: 1024px) {
    nav#mobile-hamburger-menu {
        display: none;
    }

    header.common-header {
        font-family: sans-serif;
        text-align: center;
    }

    header.common-header h1 {
        padding: 0px;
        margin: 0;
        margin-top: 1rem;
        margin-bottom: 5px;

        font-size: 3rem;

        color: var(--text-on-bg-color0);
    }

    header.common-header h2 {
        padding: 0;
        margin: 0;

        font-size: 2rem;
        color: var(--text-on-bg-color2);
    }

    .larger-text {
        font-size: 200%;
    }

    /* För närvarande inte använd */
    .rounded-corners {
        border-radius: 6px;
    }
}

/* First page ------------------------ */

div#wrapper-first-page article {
    grid-area: ar;
}

div#wrapper-first-page section {
    grid-area: se;
}

div#wrapper-first-page section ul {
    margin-top: 0.5em;
    padding: 0;

    list-style-type: none;
}

div#wrapper-first-page header {
    grid-area: he;
}

/* Mobile */
@media screen and (max-width: 767px) {
    /* Top header ------------------------ */
    nav#top-nav-mobile {
        position:fixed;

        background-color: var(--top-nav-color);
        width: 100%;
        height: 10%;
    }

    /* Det här känns verkligen inte snyggt, men det får duga till vidare */
    nav#top-nav-mobile a {
        position: absolute;
        margin-left: auto;
        margin-right: auto;
        left: 0;
        right: 0;
        text-align: center;

        text-decoration: none;
        color: black;
        font-size: 2em;
        font-weight: 600;
    }

    nav#top-nav-desktop {
        display: none;
    }

    div#wrapper-first-page {
        display: grid;
        height: 100vh;

        grid-template-areas:
        '.  '
        'he'
        'ar'
        'se'
        '.  '
        ;

        grid-template-rows: 10% 15% 30% 30% 15%;

        gap: 1em;
    }

    .rounded-corners {
        border-radius: 6px;
    }
}

/* Desktop */
@media screen and (min-width: 1024px) {
    nav#top-nav-desktop {
        position:fixed;

        background-color: var(--top-nav-color);

        width: 100%;
        height: 10%;

        display: flex;
        justify-content: space-evenly;
        align-items: center;
    }

    nav#top-nav-desktop a, nav#top-nav-desktop span {
        text-decoration: none;
        color: black;
        font-size: 2em;
    }

    nav#top-nav-desktop .dropdown .dropdown-content {
        margin-top: 0;

        display: none;
        position: absolute;
        background-color: var(--top-nav-color);

        list-style-type: none;
        padding: 0;
    }

    nav#top-nav-desktop .dropdown .dropdown-content li {
        padding: 1em;
    }

    nav#top-nav-desktop .dropdown .dropdown-content :hover {
        background-color: lightgrey;
    }

    nav#top-nav-desktop .dropdown:hover .dropdown-content {
        display: block;
    }

    nav#top-nav-mobile {
        display: none;
    }

    div#wrapper-first-page {
        display: grid;
        height: 100vh;

        grid-template-areas:
        '.  .  .  .'
        '.  he he .'
        '.  ar se .'
        '.  .  .  .'
        ;

        grid-template-rows: 10% 15% 65% 10%;
        grid-template-columns: 20% 30% 30% 20%;

        gap: 1em;
    }
}
/* End first page -------------------- */

/* Second page ----------------------- */

div#wrapper-second-page header {
    grid-area: he;
}

div#wrapper-second-page article {
    grid-area: ar;
}

div#wrapper-second-page section {
    grid-area: se;
}

div#wrapper-second-page section div#category-grid-wrapper span {
    display: flex;
    justify-content: center;
    align-items: center;

    border: 2px solid;

    padding: 0;
    margin: 0.5rem;
}

/* Mobile */
@media screen and (max-width: 767px) {
    div#wrapper-second-page {
        display: grid;
        height: 100vh;

        grid-template-areas:
        '.  '
        'he'
        'ar'
        'se'
        '.  '
        ;

        grid-template-rows: 10% 10% 35% 30% 15%;

        gap: 1em;
    }

    div#wrapper-second-page section div#category-grid-wrapper {
        display: grid;
        grid-template-rows: 1fr 1fr;
        grid-template-columns: 1fr 1fr;

        height: 85%;
    }
}

/* Desktop */
@media screen and (min-width: 1024px) {

    div#wrapper-second-page {
        display: grid;
        height: 100vh;

        grid-template-areas:
        '.  .  .'
        '.  he .'
        '.  ar .'
        '.  se .'
        ;

        grid-template-rows: 10% 10% 35% 35% 10%;
        grid-template-columns: 20% 60% 20%;

        gap: 1rem;
    }

    div#wrapper-second-page section div#category-grid-wrapper {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        height: 70%;

        margin: 0.5rem;
    }
}
/* End second page ------------------- */

/* Third page ------------------------ */

div#wrapper-third-page header {
    grid-area: he;
}

div#wrapper-third-page article {
    grid-area: ar;
}

div#wrapper-third-page section {
    grid-area: se;
}

div#wrapper-third-page footer {
    grid-area: fo;
}

/* Mobile */
@media screen and (max-width: 767px) {
    div#wrapper-third-page {
        display: grid;
        height: 100vh;

        grid-template-areas:
        '. '
        'he'
        'se'
        'ar'
        'fo'
        ;

        /* Auto här gör att jag kan använda gap utan overflow */
        grid-template-rows: 10% 10% 30% 20% auto;
        gap: 1rem;
    }
}
/* End third page -------------------- */

